# library_catalog

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 54038286a3b6_add_rating_field_to_books.py  b6811994a8b4_drop_redundant_book_id_index.py  ebb0dca214d4_create_books_table.py
src/library_catalog/: main.py
src/library_catalog/api/: dependencies.py
src/library_catalog/api/v1/routers/: books.py  health.py
src/library_catalog/api/v1/schemas/: book.py  common.py
src/library_catalog/core/: config.py  database.py  exceptions.py  logging_config.py
src/library_catalog/data/models/: book.py
src/library_catalog/data/repositories/: base_repository.py  book_repository.py
src/library_catalog/domain/: exceptions.py
src/library_catalog/domain/mappers/: book_mapper.py
src/library_catalog/domain/models/: book_domain.py  book_service.py
src/library_catalog/domain/ports/: book_enrichment_port.py
src/library_catalog/domain/services/: book_service.py
