[project]
name = "library-catalog"
version = "0.1.0"
description = ""
authors = [
    {name = "Eskov Sergey",email = "eskovs193@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "pg8000 (>=1.31.5,<2.0.0)"
]
